--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           # pip install flake8 pytest
-          if ( -f requirements.txt ); then pip install -r requirements.txt; fi
+          if ( $condition )
+            {
+              pip install -r requirements.txt
+            }
       # Run PyInstaller
       - name: Run PyInstaller
         run: pyinstaller src\app.py -n "Service Properties Parser" -i src\app.ico --add-data .\readme.md;. --add-data src\cur;.\cur --add-data src\new;.\new --add-data src\output;.\output --add-data src\logs;.\logs --add-data src\app.ico;.
