--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           # pip install flake8 pytest
-          if ([System.IO.File]::Exists( requirements.txt ))
+          if ([System.IO.File]::Exists( "requirements.txt" ))
             {
               pip install -r requirements.txt
             }
