--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
             }
       - name: Run PyInstaller
         run: |
-          pyinstaller src\app.py -n "Service Properties Parser" -i src\app.ico --add-data .\readme.md;. --add-data src\cur;.\cur --add-data src\new;.\new --add-data src\output;.\output --add-data src\app.ico;.\
+          pyinstaller src\app.py -n "Service Properties Parser" -i src\app.ico --add-data ".\readme.md;." --add-data "src\cur;.\cur" --add-data "src\new;.\new" --add-data "src\output;.\output" --add-data "src\logs;.\logs" --add-data "src\app.ico;."
           compress-archive -path "dist\Service Properties Parser" "service_properties_parser.zip" -compressionlevel optimal
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
